<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_49"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_2">

        <RadioButton
            android:id="@+id/layout_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/home_selector"
            android:drawablePadding="2dp"
            android:gravity="center_horizontal"
            android:text="@string/first_page"
            android:textColor="@drawable/radio_group_selector"
            android:textSize="@dimen/sp_12" />

        <RadioButton
            android:id="@+id/layout_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/task_selector"
            android:drawablePadding="2dp"
            android:gravity="center_horizontal"
            android:text="@string/task"
            android:textColor="@drawable/radio_group_selector"
            android:textSize="@dimen/sp_12" />

        <RadioButton
            android:id="@+id/layout_dynamic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/dynamic_selector"
            android:drawablePadding="2dp"
            android:gravity="center_horizontal"
            android:text="@string/dynamic"
            android:textColor="@drawable/radio_group_selector"
            android:textSize="@dimen/sp_12" />

        <RadioButton
            android:id="@+id/layout_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/msg_selector"
            android:drawablePadding="2dp"
            android:gravity="center_horizontal"
            android:text="@string/message"
            android:textColor="@drawable/radio_group_selector"
            android:textSize="@dimen/sp_12" />

        <RadioButton
            android:id="@+id/layout_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/mine_selector"
            android:drawablePadding="2dp"
            android:gravity="center_horizontal"
            android:text="@string/mine"
            android:textColor="@drawable/radio_group_selector"
            android:textSize="@dimen/sp_12" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textSize="@dimen/dp_17" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:textSize="@dimen/dp_14" />

    <com.woaiwangpai.iwb.customview.shadowview.ShadowRelativeLayout
        android:id="@+id/shadow"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_100"
        android:padding="@dimen/dp_16"
        bind:shadow_blur="@dimen/dp_16" />

    <com.woaiwangpai.iwb.customview.shadowview.ShadowRelativeLayout
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_100"
        android:padding="@dimen/dp_16"
        bind:shadow_radius="@dimen/dp_5" />

    <com.woaiwangpai.iwb.customview.shadowview.ShadowRelativeLayout
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_100"
        android:padding="@dimen/dp_16"
        bind:shadow_dx="@dimen/dp_8"
        bind:shadow_dy="@dimen/dp_8"
        bind:shadow_radius="@dimen/dp_5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/colorAccent"
            android:text="我是里面的控件"
            android:textColor="@android:color/white" />
    </com.woaiwangpai.iwb.customview.shadowview.ShadowRelativeLayout>

    <com.woaiwangpai.iwb.customview.shadowview.ShadowRelativeLayout
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:padding="16dp"
        bind:shadow_color="@color/colorPrimaryDark"
        bind:shadow_radius="5dp" />

    <com.woaiwangpai.iwb.customview.shadowview.ShadowRelativeLayout
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:padding="16dp"
        bind:shadow_blur="16dp"
        bind:shadow_color="@color/colorAccent"
        bind:shadow_radius="5dp" />
</LinearLayout>